--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="caruske">
-        <div class="caruske-container">
-            <div class="caruske-content">
-                <div class="slides green"></div>
-                <div class="slides purple"></div>
-                <div class="slides magenta"></div>
-                <div class="slides green"></div>
-                <div class="slides purple"></div>
-                <div class="slides magenta"></div>
+    <section class="slider">
+        <div class="wrapper">
+            <div class="slides">
+                <span class="slide green"></span>
+                <span class="slide purple"></span>
+                <span class="slide magenta"></span>
+                <span class="slide green"></span>
+                <span class="slide purple"></span>
+                <span class="slide magenta"></span>
             </div>
         </div>
         <div class="slider-dots">
