--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/caruske.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <section class="slider">
+    <div id="slider" class="slider">
         <div class="wrapper">
-            <div class="slides">
-                <span class="slide green"></span>
-                <span class="slide purple"></span>
-                <span class="slide magenta"></span>
-                <span class="slide green"></span>
-                <span class="slide purple"></span>
-                <span class="slide magenta"></span>
-            </div>
+          <div id="slides" class="slides">
+            <!-- <span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span> -->
+            <!--<span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span>
+            <span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span>
+            <span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span>
+            <span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span>
+            <span class="slide green">Slide green 1</span>
+            <span class="slide purple">Slide green 2</span>
+            <span class="slide pink">Slide green 3</span>-->
+          </div>
         </div>
-        <div class="slider-dots">
-            <div class="slider-dot" id="prev"><span></span></div>
-            <div class="slider-dot" id="next"><span></span></div>
-        </div>
-    </section>
-    <script src="./js/caruske.js"></script>
+        <a id="prev" class="control prev"></a>
+        <a id="next" class="control next"></a>
+      </div>
+      <script src="madskriots.js"></script>
 </body>
 </html>
