--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <a id="prev" class="control prev"></a>
         <a id="next" class="control next"></a>
       </div>
+      <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
       <script src="madskriots.js"></script>
+
 </body>
 </html>
